--- a/sugerencias-service/pom.xml
+++ b/sugerencias-service/pom.xml
@@ -9,9 +9,9 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.siretu</groupId>
-	<artifactId>service_sugerencias</artifactId>
+	<artifactId>sugerenciasservice</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>demo</name>
+	<name>sugerenciasservice</name>
 	<description>Demo project for Spring Boot</description>
 	<url/>
 	<licenses>
