--- a/eureka-server/src/main/resources/application.yml
+++ b/eureka-server/src/main/resources/application.yml
@@ -1,25 +1,13 @@
-<<<<<<< HEAD
 eureka:
   instance:
-    hostname: eureka-server  # ← Nombre que quieres usar
-    preferIpAddress: false   # ← Importante desactivar esto
+    hostname: localhost
   client:
-    serviceUrl:
-      defaultZone: http://eureka-server:8761/eureka/  # ← Usa el mismo nombre aquíureka:
     register-with-eureka: false
     fetch-registry: false
+    service-url:
+      defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
 server:
   port: 8761
-=======
-eureka:
-  instance:
-    hostname: eureka-server  # ← Nombre que quieres usar
-    preferIpAddress: false   # ← Importante desactivar esto
-  client:
-    serviceUrl:
-      defaultZone: http://eureka-server:8761/eureka/  # ← Usa el mismo nombre aquíureka:
-    register-with-eureka: false
-    fetch-registry: false
-server:
-  port: 8761
->>>>>>> 846f88161ea4aaf513941fd9b73c382eacd7b663
+spring:
+  config:
+    import: optional:configserver:http://localhost:8888
