--- a/nlp-service/src/main/resources/application.yml
+++ b/nlp-service/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8090
+  port: 8093
 eureka:
   instance:
     hostname: localhost
@@ -8,6 +8,6 @@ eureka:
       defaultZone: http://eureka-server:8761/eureka
 spring:
   application:
-    name: chatbot
+    name: nlp
   config:
     import: optional:configserver:http://localhost:8888
