--- a/nlp-service/pom.xml
+++ b/nlp-service/pom.xml
@@ -2,17 +2,16 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.5.0</version>
-		<relativePath/> <!-- lookup parent from repository -->
-	</parent>
-	<groupId>com.siretu</groupId>
+ <parent>
+    <groupId>com.siretu</groupId>
+    <artifactId>siretu</artifactId>
+    <version>1.0.0</version>
+  </parent>
 	<artifactId>nlpservice</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>nlpservice</name>
 	<description>Demo project for Spring Boot</description>
+  <packaging>jar</packaging>
 	<url/>
 	<licenses>
 		<license/>
@@ -40,6 +39,11 @@
 			<artifactId>spring-boot-starter-actuator</artifactId>
       <version>3.5.3</version>
 		</dependency>
+    <dependency>
+      <groupId>com.siretu</groupId>
+      <artifactId>shared-dto</artifactId>
+      <version>1.0.0</version>
+    </dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
