--- a/nlp-service/src/main/resources/application.yml
+++ b/nlp-service/src/main/resources/application.yml
@@ -2,12 +2,14 @@ server:
   port: 8093
 eureka:
   instance:
-    hostname: localhost
+    prefer-ip-address: true
   client: 
+    register-with-eureka: true
+    fetch-registry: true
     service-url:
       defaultZone: http://eureka-server:8761/eureka
 spring:
   application:
-    name: nlp
+    name: nlp-service
   config:
     import: optional:configserver:http://localhost:8888
