--- a/chatbot-service/pom.xml
+++ b/chatbot-service/pom.xml
@@ -2,17 +2,16 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.3.0</version>
-		<relativePath/> <!-- lookup parent from repository -->
-	</parent>
-	<groupId>com.siretu.chatbot</groupId>
+  <parent>
+    <groupId>com.siretu</groupId>
+    <artifactId>siretu</artifactId>
+    <version>1.0.0</version>
+  </parent>
 	<artifactId>chatbot-service</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>chatbot-service</name>
 	<description>Demo project for Spring Boot</description>
+  <packaging>jar</packaging>
 	<url/>
 	<licenses>
 		<license/>
@@ -35,6 +34,16 @@
         <groupId>org.springframework.cloud</groupId>
         <artifactId>spring-cloud-config-client</artifactId>
         <version>4.3.0</version>
+    </dependency>
+    <dependency>
+      <groupId>com.siretu</groupId>
+      <artifactId>shared-dto</artifactId>
+      <version>1.0.0</version>
+    </dependency>
+    <dependency>
+        <groupId>org.springframework.cloud</groupId>
+        <artifactId>spring-cloud-starter-feign</artifactId>
+        <version>1.4.7.RELEASE</version>
     </dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
