--- a/eureka-server/pom.xml
+++ b/eureka-server/pom.xml
@@ -2,17 +2,16 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.3.0</version>
-		<relativePath/> <!-- lookup parent from repository -->
-	</parent>
-	<groupId>com.siretu</groupId>
+  <parent>
+    <groupId>com.siretu</groupId>
+    <artifactId>siretu</artifactId> <!-- debe coincidir con tu padre -->
+    <version>1.0.0</version>
+  </parent>
 	<artifactId>eureka-server</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>demo</name>
 	<description>Demo project for Spring Boot</description>
+  <packaging>jar</packaging>
 	<url/>
 	<licenses>
 		<license/>
