--- a/lugares-service/Dockerfile
+++ b/lugares-service/Dockerfile
@@ -1,9 +1,12 @@
-
 FROM openjdk:17-jdk-alpine
-ARG JAR_FILE=target/lugares-service-0.0.1-SNAPSHOT.jar
+WORKDIR /app
 
-COPY ${JAR_FILE} app.jar
+# Copiar el JAR directamente
+COPY target/lugares-0.0.1-SNAPSHOT.jar app.jar
+
+# Copiar configuración explícitamente (¡clave!)
+COPY src/main/resources/application.yml ./config/application.yml
 
 EXPOSE 8092
 
-ENTRYPOINT ["java", "-jar", "/app.jar"]
+ENTRYPOINT ["java", "-jar", "app.jar", "--spring.config.location=classpath:/,file:./config/"]
