--- a/lugares-service/src/main/resources/application.yml
+++ b/lugares-service/src/main/resources/application.yml
@@ -7,6 +7,23 @@ eureka:
     service-url:
       defaultZone: http://eureka-server:8761/eureka
 spring:
+  spring:
+    datasource:
+      url: ${SPRING_DATASOURCE_URL}
+      username: ${SPRING_DATASOURCE_USERNAME}
+      password: ${SPRING_DATASOURCE_PASSWORD}
+      driver-class-name: org.postgresql.Driver
+
+  jpa:
+    hibernate:
+      ddl-auto: update
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.PostgreSQLDialect
+
+  sql:
+    init:
+      mode: always
   application:
     name: lugares-service
   config:
