--- a/lugares-service/pom.xml
+++ b/lugares-service/pom.xml
@@ -60,6 +60,11 @@
       <artifactId>postgresql</artifactId>
       <version>42.7.3</version> <!-- O la versión más reciente -->
     </dependency>
+    <dependency>
+        <groupId>com.pgvector</groupId>
+        <artifactId>pgvector</artifactId>
+        <version>0.1.4</version>
+    </dependency>
     <!-- Spring Cloud -->
     <dependency>
       <groupId>org.springframework.cloud</groupId>
