--- a/sugerencias-service/pom.xml
+++ b/sugerencias-service/pom.xml
@@ -7,9 +7,9 @@
     <artifactId>siretu</artifactId>
     <version>1.0.0</version>
   </parent>
-	<artifactId>sugerenciasservice</artifactId>
+	<artifactId>sugerencias-service</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>sugerenciasservice</name>
+	<name>sugerencias-service</name>
 	<description>Demo project for Spring Boot</description>
   <packaging>jar</packaging>
 	<url/>
@@ -48,6 +48,10 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
+    <dependency>
+      <groupId>org.springframework.cloud</groupId>
+      <artifactId>spring-cloud-starter-openfeign</artifactId>
+    </dependency>
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
